--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ section header{
   position: relative;
   top: 6%;
   max-width: 78%;
-  padding: 5px 15px;
+  padding:5px;
   z-index: 3;
   margin: auto;
   display: flex;
@@ -123,7 +123,7 @@ section header ul li .active{
 .imgbox{
   position:absolute;
   top: 15%;
-  left:65%;
+  left:60%;
   max-width:400px;
   height: 400px;
 }
@@ -180,21 +180,190 @@ section header ul li .active{
   line-height: 1.6;
   font-size:15px;
 }
-@media (max-device-width:1245px){
+@media screen and (max-device-width:1245px){
+  .container{
+   height:50vh;
+   max-width:80%;
+}
   .imgbox {
     position: absolute;
     top: 15%;
     left: 70%;
     max-width: 385px;
     height: 337px;
+}
+.sci {
+  position: absolute;
+  left: 96.5%;
 }
 }
 @media (max-device-width:1495px){
+  .container{
+    height: 79vh;
+    max-width:80%;
+  }
+  .content{
+    max-width:700px;
+  }
+  .content h2{
+   font-weight: 600;
+   font-size: 20px;
+  }
+  .content p{
+    font-size:18px;
+  }
+  .content a{
+    font-size: 15px;
+    padding:5px 12px;
+  }
   .imgbox {
     position: absolute;
     top: 15%;
     left: 70%;
     max-width: 385px;
     height: 337px;
+  }
+  }
+@media (max-device-width:1026px){
+  .container {
+    height: 71vh;
+    max-width: 80%;
+}
+.content {
+  max-width: 569px;
+}
+}
+@media (max-device-width:768px){
+section header{
+top: 8%;
+}
+.container{
+height: 65vh;
+top: 2%;
+}
+.content {
+    max-width: 436px;
+}
+.content h2 {
+  font-weight: 598;
+  font-size: 18px;
+}
+.content p {
+  font-size: 14px;
+}
+.imgbox {
+  left: 65%;
+}
+.imgbox img{
+  height:65%;
+}
+.sci {
+  position: absolute;
+  left: 95.5%;
+}
+.sci li a{
+  width: 41px;
+  height: 43px;
+}
+}
+@media (min-device-width:480px) and (max-device-width:768px){
+section header{
+justify-content: center;
+align-items: center;
+flex-direction: column;
+top: 10%;
+max-width: 73%;
+display:flex;
+}
+section header .logo{
+margin-bottom: 4px;
+} 
+section header ul li a {
+font-size: 13px;
+padding: 8px 11px;
+}
+.content
+{
+position: absolute;
+top: 20%;
+left: 0%;
+transform: translateX(-56px);
+padding: 10px;
+padding-left: 82px;
+}
+.imgbox{
+top: 23%;
+}
+}
+@media (max-device-width:479px) and (min-device-width:320px){
+section header{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+top: -1%;
+left: -1%;
+}
+section header .logo{
+font-size: 25px;
+padding:2px 8px;
+margin-bottom:2px;
+}
+section header ul{
+display: flex;
+justify-content: center;
+align-items: center;
+margin: auto;
+}
+section header ul li{
+  margin: 2px;
+}
+section header ul li a{
+font-size: 7px;
+}
+.container {
+position: absolute;
+height: 95vh;
+top: 5%;
+width: 90%;
+left: 9%;
+}
+.content{
+transform: translate(0);
+padding: 5px 10px;
+top: 9%;
+}
+.content p{
+line-height:1.1;
+font-size:16px;
+}
+.imgbox {
+left: -1%;
+top: 52%;
+position:relative;
+}
+.imgbox img{
+height: 40%;
+animation: animate 3s linear infinite;
+}
+@keyframes animate{
+0%,100%
+{
+  transform: translateY(-30px);
+}
+50%
+{
+transform: translateY(10%);
+}
+}
+.sci{
+position: absolute;
+bottom: -214px;
+left: 20%;
+display: flex;
+flex-direction: row;
+}
+.copyright-text{
+bottom: 0;
 }
 }
